[package]
name = "mini-lsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
moka = "0.9"
tempfile = "3"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
ouroboros = "0.15"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
rustfmt = "0.10.0" # 将版本号替换为所需的rustfmt版本
